2005-06-21  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/fixture.py: moved base_fixture here from test_base.

	* tests/test_multifetch.py (test_fetch1): first fetch test.

	* doc/manual.rst: section on transactions (suggested by Kieran
	Holland). 

2005-06-20  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document that None will be stored for columns
	upon new() if they aren't specified, and there is no refetch.

	* tests/test_base.py: test for new with default values; for
	refresh, and getSome.

	* src/pydo/base.py (PyDO._new): when creating an object without
	refetch, add None to the dictionary for any columns that aren't
	specified in the fieldData.

2005-06-19  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_base.py: two delete tests.

2005-06-16  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: note about mysql's case-sensitivity of table
	names and the guess_tablename feature.

	* tests/test_base.py: added base_fixture; starting to refactor
	tests to use it.

	* src/pydo/base.py (PyDO.joinTable): wasn't testing properly the
	return value of execute (berlios bug #4297).

	* tests/test_base.py: added tags to everything.

	* src/testingtesting.py (runtests): support for classes as well as
	functions.  Also, fix for irritating double-logging.

2005-06-15  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/mysqlconn.py (MysqlDBI.describeTable): same fix
	here -- exclude unique constraints which contain nullable
	columns. 

	* src/testingtesting.py: logging tweak.

	* src/pydo/drivers/psycopgconn.py (PsycopgDBI.autocommit): fix
	implementation for psycopg2 (had it exactly backwards).
	(PsycopgDBI.describeTable): fix for multi-column unique
	constraints (was including fields, not field names) and exclude
	nullable columns from unique constraints.

	* src/pydo/drivers/sqliteconn.py (SqliteDBI.describeTable): coerce
	nullable to an int, as some pysqlite versions don't return an int