@@ -2,15 +2,16 @@
 Tests for the pydo.dbi module.
 
 """
+import threading
 
 from testingtesting import tag
 from config import ALLDRIVERS
 dbitags=ALLDRIVERS+['dbi']
+import pydo.dbi as D
 
 @tag(*dbitags)
 def test_initAlias1():
     """ calls initAlias with bogus arguments.  Should succeed."""    
-    import pydo.dbi as D
     alias='pomposity'
     D.initAlias(alias, 'anything', 'anything', True, True)
     try:
@@ -22,7 +23,6 @@ def test_initAlias1():
 @tag(*dbitags)    
 def test_initAlias2():
     """ calls initAlias twice with the same arguments.  Should succeed. """
-    import pydo.dbi as D
     alias='fruitcake'
     driver='pong'
     connectArgs='blimp'
@@ -42,7 +42,6 @@ def test_initAlias2():
 @tag(*dbitags)
 def test_initAlias3():
     """ calls initAlias twice with different arguments.  Should fail. """
-    import pydo.dbi as D
     alias='fruitcake'
     driver='pong'
     connectArgs='blimp'
@@ -63,8 +62,30 @@ def test_initAlias3():
 @tag(*dbitags)
 def test_delAlias1():
     """ calls delAlias for an alias that does not exist. Should succeed."""
-    import pydo.dbi as D
     D.delAlias('jackandjill')
 
+@tag(*dbitags)
+def test_threads1():
+    """
+    tests that each thread gets its own dbapi connection.
+    """
+    db=D.getConnection('pydotest')
+    id1=id(db.conn)
 
-    
+    class mythread(threading.Thread):
+        def run(self):
+            mydb=D.getConnection('pydotest')
+            self.connid=id(mydb.conn)
+    t=mythread()
+    t.start()
+    t.join()
+    assert t.connid!=id1
+    assert id(db.conn)==id1
+
+#@tag(*dbitags)    
+#def test_pool1():
+#    """
+#    creates a pool, gets a connection from it, stores its id.  Starts a thread
+#    and gets 
+#    """
+#    pass
